--- a/asw-order-manager/api-gateway/src/main/resources/application.yml
+++ b/asw-order-manager/api-gateway/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: apigateway
   cloud:
     consul:
-      host: localhost
+      host: consul
       port: 8500
       discovery:
         instanceId: ${spring.application.name}-${spring.cloud.client.hostname}-${random.value}
