--- a/asw-order-manager/order-service/src/main/resources/application.yml
+++ b/asw-order-manager/order-service/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   # CONSUL 
   cloud:
     consul:
-      host: localhost
+      host: consul
       port: 8500
       discovery: 
         instanceId: ${spring.application.name}-${spring.cloud.client.hostname}-${random.value}
